--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,26 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+
+
+}
+
+
+
+
+/* Our Servies Card 3D flip effect */
+.perspective {
+  perspective: 1000px;
+}
+.transform-style-preserve-3d {
+  transform-style: preserve-3d;
+}
+.backface-hidden {
+  backface-visibility: hidden;
+}
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+.hover\:rotate-y-180:hover {
+  transform: rotateY(180deg);
 }
